# Tornado-base-CRUD

./: .gitignore  README.md  docker-compose.dev.yml  main.py  pyproject.toml
app/: models.py  views.py
core/: base.py  db.py
migrations/: env.py
migrations/versions/: 1388852edc6b_deleted_some_field.py  e354f3766a7d_initial_migrate.py
