[tool.poetry]
name = "tornado_test"
version = "0.1.0"
description = ""
authors = ["Vasili Kavaleu <v.kavaleu@naveksoft.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tornado = "^6.1"
psycopg2-binary = "^2.8.6"
tornado-sqlalchemy = "^0.7.0"
alembic = "^1.6.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
